--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,10 @@ body{
     color: #333;
     text-align: center;
     font-size: 16px;
+    font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
+
 }
 
 #container{
